correct main splash spacing

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,11 @@ a:hover {
   font-weight: 800
 }
 
+.main-splash-spacer {
+  height: 100px;
+  /* background-color: blue; */
+}
+
 .full-width-image {
   width: 100vw;
 }
@@ -146,8 +151,18 @@ textarea.shoe-text-input:focus {
 }
 
 @media (min-width: 992px) { 
+
   .about-container {
     margin-left: 10rem;
     margin-right: 10rem;
   }
+
+}
+
+@media (min-width: 1200px) { 
+
+  .main-splash-letter {
+    font-size: 10rem;
+  }
+
 }
